// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.One2Many for Resource.Form test furet ui form field one2many 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="box"
    style="width: 100%;"
  >
    <div
      class="container"
    >
      <!---->
    </div>
     
    <div
      class="container"
      config="[object Object]"
      manager="[object Object]"
    >
      <strong>
        Waiting loading component
      </strong>
    </div>
  </div>
</span>
`;

exports[`Field.One2Many for Resource.List Empty 1`] = `
<div>
  <div />
</div>
`;

exports[`Field.One2Many for Resource.List Hidden 1`] = `
<div>
  <span />
</div>
`;

exports[`Field.One2Many for Resource.List With one value 1`] = `
<div>
  <div>
    <span
      class="tag"
    >
      <a>
        Go to =&gt; Entry 1
        
      </a>
    </span>
  </div>
</div>
`;

exports[`Field.One2Many for Resource.List With style 1`] = `
<div>
  <div>
    <span
      class="tag"
      style="color: red;"
    >
      <a>
        Go to =&gt; Entry 1
        
      </a>
    </span>
    <span
      class="tag"
      style="color: blue;"
    >
      <a>
        Go to =&gt; Entry 2
        
      </a>
    </span>
  </div>
</div>
`;

exports[`Field.One2Many for Resource.List With two value 1`] = `
<div>
  <div>
    <span
      class="tag"
    >
      <a>
        Go to =&gt; Entry 1
        
      </a>
    </span>
    <span
      class="tag"
    >
      <a>
        Go to =&gt; Entry 2
        
      </a>
    </span>
  </div>
</div>
`;
